--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,10 +7,11 @@
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    margin: auto;
     width: 100%;
     background: white;
+    padding: 1rem 0;
+    text-align: center;
+    box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
   }
+  
 
